--- a/inliner3.cabal
+++ b/inliner3.cabal
@@ -20,6 +20,10 @@ library
                      , vector
                      , inline-r < 0.9.1
                      , array
+  include-dirs:        C
+  C-sources:           C/functions.c
+  default-extensions:  ForeignFunctionInterface
+                     , DataKinds
   default-language:    Haskell2010
 
 foreign-library inliner3
