--- a/inliner3.cabal
+++ b/inliner3.cabal
@@ -42,6 +42,7 @@ foreign-library inliner3
                      , containers
   hs-source-dirs:      src-dll
   c-sources:           StartEnd.c
+  ghc-options:         -fllvm
   default-language:    Haskell2010
 
 source-repository head
