--- a/inliner3.cabal
+++ b/inliner3.cabal
@@ -20,6 +20,7 @@ library
                      , vector
                      , inline-r < 0.9.1
                      , array
+                     , singletons
   include-dirs:        C
   C-sources:           C/functions.c
   default-extensions:  ForeignFunctionInterface
@@ -30,8 +31,8 @@ foreign-library inliner3
   type:                native-shared
   lib-version-info:    0:1:0
   if os(Windows)
-    options: standalone
-    mod-def-file: MyDef.def
+    options:           standalone
+    mod-def-file:      MyDef.def
   other-modules:       Dim
   build-depends:       base >= 4.7 && < 5
                      , inline-r < 0.9.1
@@ -42,7 +43,7 @@ foreign-library inliner3
                      , containers
   hs-source-dirs:      src-dll
   c-sources:           StartEnd.c
-  ghc-options:         -fllvm
+  ghc-options:         -O2
   default-language:    Haskell2010
 
 source-repository head
